# Ethereum_NFT_DApp

./: .gitignore  .spectra.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  MERGE_INSTRUCTIONS.md  README.md  README_UI_SNAPSHOT.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: Memory.md
.claude/commands/: critic-gate.md  spectra-apply.md  spectra-validate.md
code/: app.py  constants.py  pg_client.py
docs/: API_REFERENCE.md  APP_DB_LOG.md  CODING_STANDARDS.md  CONTRACT_ADDRESSES.md  DB_SCHEMA.md  DEPLOYMENT.md  DISCOVERY_LOG.md  FEATURE_SPEC.md  INCIDENT_LOG.md  INDEX.md  INTEGRATION_MANIFEST.md  OPERATIONS_RUNBOOK.md  PIPELINE_CONTRACT.md  REFACTOR_SOP.md  SERVER_CONFIG.md  SPECTRA_WORKFLOW.md  STATE_DEFINITIONS.md
docs/agent-reports/: 001-20260516-APP26-S023-MyNFT-contract-GEM.md  002-20260516-APP26-S023-NFTMarket-contract-GEM.md  003-20260516-APP26-S023-deploy-scripts-GEM.md  004-20260516-APP26-S023-mint-page-GEM.md  005-20260516-APP26-S023-mynfts-page-GEM.md  006-20260516-APP26-S023-market-page-GEM.md  007-20260516-APP26-S023-hardhat-tests-GEM.md  215-20260516-contract-security-fixes-GEM-DONE.md  216-20260516-mint-page-ux-GEM-DONE.md  217-20260516-mynfts-page-ux-GEM-DONE.md  218-20260516-market-error-handling-GEM-DONE.md  219-20260516-tests-deploy-fixes-GEM-DONE.md
docs/ui-templates/: _SNAPSHOT_INDEX.md  _VERSION_MATRIX.md  _meta.yaml.template
docs/v0.1.0/: 00_INDEX.md
docs/v0.1.0/patches/: README.md
scripts/: verify_ui_snapshot.py
tests/: conftest.py
tests/contract/: test_api_endpoints.py
tests/smoke/: test_health.py
(+5 files in other folders)
