[project]
name = "{project_name}"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "authlib>=1.3.0",
    "psycopg2-binary>=2.9.9",
    "werkzeug>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
